# overlord

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  activations.hh  build.bfg  dataloader.hh  debug.hh  initializers.hh  layers.hh  loss.hh  makefile  model.hh  overlord.hh  test.cc  util.hh
activations/: CMakeLists.txt
activations/include/: activations.h
activations/include/activations/: activations.h
activations/src/: activations.cc
cerebrum/layers/include/: conv.h  dense.h  dropout.h  fc.h  input.h  layer.h  layer_types.h
cerebrum/linalg/include/: dim.h  tensor.h
cerebrum/optim/include/: gradient.h
cerebrum/test/: conv_test.cc
criterion/: README.md
criterion/include/criterion/: criterion.h
criterion/src/: criterion.cc
engine/: runtime.cc
engine/include/: runtime.h
errors/include/: network_error.h
ga/: CMakeLists.txt
initializers/: CMakeLists.txt
initializers/include/initializers/: initializers.h  variance_scaling.h
initializers/src/: initializers.cc
initializers/test/: CMakeLists.txt  initializers_test.cc
layers/: CMakeLists.txt
layers/include/: base.h  binary_cross_entropy.h  conv.h  cross_entropy.h  dense.h  dropout.h  layer.h  max_pooling.h  relu.h  softmax.h
layers/include/layers/: base.h  dense.h
layers/src/: dense.cc
old/criterion/: CMakeLists.txt
old/ga/: CMakeLists.txt
old/initializers/include/initializers/: initializers.h
old/layers/include/layers/: base.h
old/layers/src/: dense.cc
old/regularizers/: CMakeLists.txt
old/swiss/include/swiss/: containers.h  strings.h
regularizers/: CMakeLists.txt
regularizers/include/regularizers/: regularizers.h
regularizers/src/: regularizers.cc
src/: activations.rs  layers.rs  lib.rs
swiss/: CMakeLists.txt
swiss/src/: strings.cc
test/: conv_test.cc  dense_test.cc  file_reader_test.cc  initializers_test.cc  network_test.cc
util/: file_reader.cc
util/include/: file_reader.h  mnist.h
